--- a/uppgift.css
+++ b/uppgift.css
@@ -1,4 +1,15 @@
 .uppgift-color {
     background-color: brown;
 }
+
+.uppgift-div{
+    background-color: rgb(34, 10, 10);
+    width: 65%;
+    padding: 1em;
+    float: left;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    margin-top: 20px;
+  }
+  
     
