--- a/uppgift.css
+++ b/uppgift.css
@@ -11,5 +11,14 @@
     margin-bottom: 15px;
     margin-top: 20px;
   }
+
+#footer {
+background-color: burlywood;
+position: relative;
+height: 100px;
+margin-top: -100px;
+clear: both;
+   
+}
   
     
