--- a/uppgift.css
+++ b/uppgift.css
@@ -12,13 +12,14 @@
     margin-top: 20px;
   }
 
-#footer {
-background-color: burlywood;
-position: relative;
-height: 100px;
-margin-top: -100px;
-clear: both;
-   
-}
+  #footer{
+    background-color: #f1f1f1;
+    clear: both;
+    margin: 50px 0px -20px -30px;
+    padding: 30px;
+    border-top: 5px red solid;
+    text-align: center;
+    width: 100%;
+  }
   
     
