--- a/uppgift.css
+++ b/uppgift.css
@@ -13,11 +13,11 @@
   }
 
   #footer{
-    background-color: #f1f1f1;
+    background-color:rgb(34, 10, 10);
     clear: both;
     margin: 50px 0px -20px -30px;
     padding: 30px;
-    border-top: 5px red solid;
+    border-top: 5px cornsilk;
     text-align: center;
     width: 100%;
   }
