--- a/uppgift.css
+++ b/uppgift.css
@@ -1,5 +1,5 @@
 .uppgift-color {
-    background-color: brown;
+    background-color: rgb(34, 10, 10);
 }
 
 .uppgift-div{
@@ -14,10 +14,11 @@
   }
 
   #footer{
-    background-color:rgb(34, 10, 10);
+    background-color:rgb(255, 214, 163);
     clear: both;
     margin: 50px 0px -20px -30px;
     padding: 30px;
+    box-shadow: 0 0 15px rgba(255, 137, 1, 0.5); 
     border-top: 5px cornsilk;
     text-align: center;
     width: 100%;
