--- a/uppgift.css
+++ b/uppgift.css
@@ -30,5 +30,19 @@
   .img_Upgift {
       border-radius: 5px;
     } 
+
+    .sidomeny-uppgift {
+        position: fixed;
+        background-color: rgb(255, 214, 163);
+        font-family: "Quicksand", Arial, sans-serif;
+        font-size: 14px;
+        padding: 1em;
+        width: 20%;
+        margin-left: 75%;
+        border-radius: 10px;
+        box-shadow: 0 0 15px rgba(255, 137, 1, 0.5);
+        margin-top: 20px;
+        float: right;
+      }
   
     
