--- a/uppgift.css
+++ b/uppgift.css
@@ -29,7 +29,11 @@
 
   .img_Upgift {
       border-radius: 5px;
-      width: fit-content;
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
+
+
     } 
 
     .sidomeny-uppgift {
