--- a/uppgift.css
+++ b/uppgift.css
@@ -106,5 +106,8 @@
         border-radius: 10px;
         box-shadow: 0 0 15px rgba(255, 137, 1, 0.5); 
         margin: 20px 15px;
-        text-align: center; /**** centrerar texten i mittkolum***/
-        }
+        text-align: center;  }
+
+        
+        /**** centrerar texten i mittkolum***/
+       
