--- a/uppgift.css
+++ b/uppgift.css
@@ -76,7 +76,7 @@
         margin: 500px;
       }
       
-      .kultur_right {
+      .sökbar_Upgift {
         background-color: rgb(250, 232, 194);
         font-family: "Quicksand", Arial, sans-serif;
         font-size: 75%;
