--- a/uppgift.css
+++ b/uppgift.css
@@ -15,6 +15,14 @@
     margin-top: 5px;
   }
 
+  h3 {
+    text-align: center;
+    font-size: 1.5em;
+    color: #fd0101;
+    margin-top: 1em;
+    margin-left: 0em;
+  }
+
   #footer{
     background-color:rgb(255, 214, 163);
     clear: both;
