--- a/uppgift.css
+++ b/uppgift.css
@@ -80,7 +80,7 @@
 
 
 
-.sport_right {
+.upgpift_right {
   background-color: rgb(255, 214, 163);
   font-family: "Quicksand", Arial, sans-serif;
   font-size: 13px;
